--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     permissions:
-      contents: write # Important pour permettre l'upload vers la release
+      contents: write
     strategy:
       matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
@@ -32,7 +32,6 @@ jobs:
       - name: Make Executables
         run: npm run make
 
-      # On envoie directement les fichiers depuis chaque machine vers la release
       - name: Upload to Release
         uses: softprops/action-gh-release@v2
         with:
