--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
   },
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {
+        "extendInfo": {
+          "LSUIElement": "1"
+        }
+      },
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel"
