--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,6 +31,8 @@ jobs:
 
       - name: Make Executables
         run: npm run make
+        env:
+          ADDRESS: ${{ env.ADDRESS }}
 
       - name: Upload to Release
         uses: softprops/action-gh-release@v2
