--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Make Executables
         run: npm run make
         env:
-          ADDRESS: ${{ env.ADDRESS }}
+          ADDRESS: ${{ vars.ADDRESS }}
 
       - name: Upload to Release
         uses: softprops/action-gh-release@v2
