--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,6 +2,8 @@ name: Build and Release
 on:
   release:
     types: [published]
+env:
+  env_var: ${{ vars.ADDRESS }}
 
 jobs:
   build:
@@ -15,11 +17,7 @@ jobs:
     steps:
       - name: Debug Variables
         run: |
-          echo "La variable ADDRESS est : ${{ secrets.ADDRESS }}"
-          if [ -z "${{ secrets.ADDRESS }}" ]; then
-            echo "ERREUR : ADDRESS est vide !"
-            exit 1
-          fi
+          echo $env_var
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -39,8 +37,6 @@ jobs:
 
       - name: Make Executables
         run: npm run make
-        env:
-          ADDRESS: ${{ vars.ADDRESS }}
 
       - name: Upload to Release
         uses: softprops/action-gh-release@v2
