--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "livechat-desktop",
   "description": "Concept par Potatoze™ !",
   "keywords": [],
-  "main": ".webpack/main",
+  "main": "./src/main.js",
   "version": "0.3.1415",
   "author": "Ginbo",
   "scripts": {
@@ -22,14 +22,37 @@
     "@electron-forge/maker-rpm": "7.9.0",
     "@electron-forge/maker-squirrel": "7.9.0",
     "@electron-forge/maker-zip": "7.9.0",
-    "@electron-forge/plugin-webpack": "^7.10.2",
-    "@vercel/webpack-asset-relocator-loader": "^1.10.0",
     "css-loader": "^7.1.2",
     "electron": "39.2.7",
     "style-loader": "^4.0.0"
   },
   "config": {
-    "forge": "./forge.config.js"
+    "forge": {
+      "packagerConfig": {
+        "extendInfo": {
+          "LSUIElement": "1"
+        }
+      },
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel"
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ]
+    }
   },
   "license": "MIT"
 }
